<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieActivity">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="86dp"
        android:layout_height="31dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="55dp"
        android:text="@string/nlabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:text="@string/nval"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/dlabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
        android:id="@+id/desc_val"
        android:layout_width="318dp"
        android:layout_height="79dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_label" />

    <TextView
        android:id="@+id/genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/glabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_val" />

    <Spinner
        android:id="@+id/spinner_id"
        android:layout_width="214dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/genre_label"
        app:layout_constraintTop_toBottomOf="@+id/desc_val" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/ylabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_label" />

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/rlabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre_label" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="149dp"
        android:layout_height="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toEndOf="@+id/rating_label"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id" />

    <TextView
        android:id="@+id/imdb_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/ilabel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year_label" />

    <EditText
        android:id="@+id/imdb_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="IMDB"
        android:inputType="textPersonName"
        android:text="@string/imdbval"
        app:layout_constraintStart_toEndOf="@+id/imdb_label"
        app:layout_constraintTop_toBottomOf="@+id/year_val" />

    <Button
        android:id="@+id/add_mov_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:text="@string/addmovbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imdb_val" />

    <EditText
        android:id="@+id/year_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Year"
        android:inputType="number"
        android:text="@string/yearval"
        app:layout_constraintStart_toEndOf="@+id/year_label"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

    <TextView
        android:id="@+id/seek_val"
        android:layout_width="13dp"
        android:layout_height="21dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="51dp"
        android:text="@string/seekval"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id" />
</androidx.constraintlayout.widget.ConstraintLayout>